--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="./manifest.json"/> -->
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
